--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -29,13 +30,17 @@
     "reactstrap": "^7.1.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.0.4",
     "@types/cookie": "^0.3.2",
     "@types/graphql": "^14.0.7",
     "@types/next": "^7.0.6",
     "@types/react": "^16.4.16",
     "@types/react-dom": "16.0.11",
     "@types/reactstrap": "^7.1.3",
-    "typescript": "3.2.4"
+    "typescript": "3.2.4",
+    "@graphql-codegen/typescript": "1.0.4",
+    "@graphql-codegen/typescript-operations": "1.0.4",
+    "@graphql-codegen/typescript-react-apollo": "1.0.4"
   },
   "license": "ISC"
 }
