--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "ts-node --project tsconfig.server.json server/index.ts",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -16,11 +16,13 @@
     "apollo-link-http": "^1.5.14",
     "bootstrap": "^4.3.1",
     "cookie": "^0.3.1",
+    "formik": "^1.5.1",
     "graphql": "^14.1.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.3",
     "next-compose-plugins": "^2.1.1",
     "next-optimized-images": "^2.3.3",
+    "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-animated-slider": "^1.1.4",
@@ -31,16 +33,18 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.0.4",
+    "@graphql-codegen/typescript": "1.0.4",
+    "@graphql-codegen/typescript-operations": "1.0.4",
+    "@graphql-codegen/typescript-react-apollo": "1.0.4",
     "@types/cookie": "^0.3.2",
     "@types/graphql": "^14.0.7",
     "@types/next": "^7.0.6",
     "@types/react": "^16.4.16",
     "@types/react-dom": "16.0.11",
     "@types/reactstrap": "^7.1.3",
-    "typescript": "3.2.4",
-    "@graphql-codegen/typescript": "1.0.4",
-    "@graphql-codegen/typescript-operations": "1.0.4",
-    "@graphql-codegen/typescript-react-apollo": "1.0.4"
+    "ts-node": "^8.0.3",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "3.2.4"
   },
   "license": "ISC"
 }
