--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.3.1",
     "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "bootstrap": "^4.3.1",
     "cookie": "^0.3.1",
